fixed problem with margin on mobile devices

--- a/my-project/src/components/cards/Cards.module.css
+++ b/my-project/src/components/cards/Cards.module.css
@@ -1,7 +1,8 @@
 .cards{
-    height: 100%;
+    min-height: 100vh;
     align-items: center;
     margin-bottom: 20px;
+    margin-top:120px;
 }
 .doto {
     font-family: "Doto", serif;
